# botfather

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  LICENSE.md  Makefile  README.md  package.pro
botfather/: CMakeLists.txt  botfather.pro  main.cpp  settings.h  version.hpp.in
botfather/android/: adb_device_info.h  adb_wrapper.cpp  adb_wrapper.h  android_api.cpp  android_api.h
botfather/auth/: auth_settings.hpp  license_api_client.cpp  license_api_client.h  license_api_client.hpp  rest_api_client.cpp  rest_api_client.h  rest_api_client.hpp  scripts_api_client.cpp  scripts_api_client.hpp  scriptsapiclient.cpp  scriptsapiclient.h  scriptsapiclient.hpp  status_api_client.cpp
botfather/browser/: browser.cpp  browser.h  browser_api.cpp  browser_api.h  browser_app.cpp  browser_app.h  browser_client.cpp  browser_client.h
botfather/engine/: bot.cpp  bot.h  engine.cpp  engine.h  engine.hpp  engine_utils.cpp  engine_utils.hpp
botfather/engine/android/: adb_device_info.hpp
botfather/engine/apis/: abstract_api.cpp  abstract_api.h  abstract_api.hpp  algorithm_api.cpp  algorithm_api.h  algorithm_api.hpp  android_api.cpp  android_api.h  android_api.hpp  browser_api.cpp  browser_api.h  config_api.cpp  config_api.h  config_api.hpp  desktop_api.cpp  desktop_api.h  desktop_api.hpp  helper_api.cpp  helper_api.h  helper_api.hpp  path_finder_api.cpp  path_finder_api.h  vision_api.cpp  vision_api.h  vision_api.hpp
botfather/engine/browser/: browser.cpp  browser.hpp  browser_app.cpp  browser_app.hpp  browser_creator.cpp  browser_creator.hpp  browser_life_span_handler.cpp  browser_life_span_handler.hpp  browser_list_model.cpp  browser_list_model.hpp  browser_load_handler.cpp  browser_manager.cpp  browser_manager.hpp  browser_render_handler.cpp  browser_render_handler.hpp  browser_request_handler.cpp  browser_util.hpp  cef_key_event_adapter.cpp  cef_key_event_adapter.hpp
botfather/engine/common/: bf_key_mapper.cpp  bf_key_mapper.hpp  bf_keymap.hpp  linux11_keyboard_codes.hpp  qt_key_traits.hpp  qt_keymaps.hpp
botfather/engine/desktop/: desktop.hpp  desktop_x11.cpp  keymap.hpp
botfather/engine/prototypes/: abstract_prototype.cpp  abstract_prototype.h  blob_tpl_prototype.hpp  browser_prototype.cpp  browser_prototype.h  browser_prototype.hpp  color_prototype.h  image_prototype.cpp  image_prototype.hpp  margins_prototype.cpp  margins_prototype.h  match_prototype.h  match_prototype.hpp  point_prototype.cpp  point_prototype.h  point_prototype.hpp  rect_prototype.cpp  rect_prototype.h  rect_prototype.hpp  size_prototype.cpp  timer_prototype.cpp  timer_prototype.h  timer_prototype.hpp  url_prototype.cpp
botfather/engine/runtime/: abstract_api.cpp  abstract_api.hpp  abstract_prototype.cpp  algorithm_api.cpp  algorithm_api.hpp  android_api.cpp  android_api.hpp  blob_tpl_prototype.hpp  browser_prototype.cpp  browser_prototype.hpp  config_api.cpp  desktop_api.cpp  desktop_api.hpp  helper_api.cpp  helper_api.hpp  image_prototype.cpp  image_prototype.hpp  match_prototype.hpp  point_prototype.cpp  point_prototype.hpp  size_prototype.hpp  stats_api.hpp  timer_prototype.cpp  timer_prototype.hpp  url_prototype.cpp  url_prototype.hpp  vision_api.cpp  vision_api.hpp
botfather/engine/types/: blob_tpl.cpp  blob_tpl.h  browser.cpp  browser.h  browser.hpp
botfather/engine/vision/: blob_tpl.cpp  match.cpp  match.hpp  vision.cpp  vision.hpp
botfather/git/: abstract_git_operation.cpp  abstract_git_operation.hpp  abstractgitoperation.cpp  abstractgitoperation.h  git_behind_operation.cpp  git_behind_operation.hpp  git_clone_operation.cpp  git_clone_operation.hpp  git_fetch_operation.cpp  git_fetch_operation.hpp  git_reclone_operation.cpp  git_reclone_operation.hpp  gitbehindoperation.cpp  gitbehindoperation.h  gitbehindoperation.hpp  gitcloneoperation.cpp  gitcloneoperation.h  gitcloneoperation.hpp  gitfetchoperation.cpp  gitfetchoperation.h  gitfetchoperation.hpp  gitrecloneoperation.cpp  gitrecloneoperation.h  gitrecloneoperation.hpp
botfather/gui/: android_dialog.cpp  android_dialog.h  android_dialog.ui  auth_dialog.cpp  auth_dialog.h  auth_dialog.ui  auth_window.cpp  auth_window.h  auth_window.ui  botwidget.cpp  botwidget.h  botwidget.ui  browser_address_bar.cpp  browser_address_bar.h  browser_dialog.cpp  browser_dialog.h  browser_dialog.ui  browser_widget.cpp  browser_widget.h  browser_window.cpp  browser_window.h  browser_window.ui  config_dialog.cpp  config_dialog.h  config_dialog.ui  control_window.cpp  control_window.h  control_window.ui  log_dialog.cpp  log_dialog.h  log_dialog.ui  main_window.cpp  main_window.hpp  main_window.ui  mainwindow.cpp  mainwindow.h  mainwindow.hpp  mainwindow.ui  status_dialog.cpp  update_widget.cpp  (+2 more)
botfather/gui/androiddialog/: android_dialog.cpp  android_dialog.hpp  android_dialog.ui
botfather/gui/authdialog/: auth_dialog.cpp  auth_dialog.h  auth_dialog.hpp  auth_dialog.ui
botfather/gui/botwidgets/: abstract_bot_widget.cpp  abstract_bot_widget.hpp  abstractbotwidget.cpp  abstractbotwidget.h  abstractbotwidget.hpp  bot_browsers_widget.cpp  bot_browsers_widget.hpp  bot_browsers_widget.ui  bot_config_widget.cpp  bot_config_widget.hpp  (+33 more)
botfather/res/: botfather.qrc  botfather.rc  gui.qrc  resource.hpp
botfather/scripting/: bot.cpp  bot.h  bot_thread.cpp  bot_thread.h  helper_api.cpp  helper_api.h
botfather/shared/: constants.h  q_settings_json_format.cpp  q_settings_json_format.hpp  qsettingsjsonformat.cpp  qsettingsjsonformat.h  settings.h
botfather/src/: main.cpp
botfather/tools/: collect_deps.sh  cpld.sh  mtoolwrapper.cpp  mtoolwrapper.h  strip_all_so_files.sh
botfather/updater/: update_checker.cpp  update_checker.h  updater_dialog.ui
botfather/vision/: blob_tpl.cpp  blob_tpl.h  blob_tpl_factory.cpp  hsv_color.cpp  hsv_color_factory.h  image.cpp  image.h  match.cpp  match.h  vision.cpp  vision.h  vision_api.cpp  vision_api.h
webhelper/: CMakeLists.txt  bf_converter.cpp  bf_converter.hpp  bf_debug_tools.cpp  bf_debug_tools.hpp  bf_serializer.cpp  bf_serializer.hpp  helper_app.cpp  helper_app.hpp  main.cpp  webhelper.pro
(+404 files in other folders)
